# jarvis-dashboard

./: .gitignore  README.md  pyproject.toml  start-jarvis.command
control_rods/: __init__.py  cli.py
control_rods/api/: __init__.py  app.py
control_rods/frontend/static/: README.txt
control_rods/frontend/templates/: index.html
control_rods/pipeline/: __init__.py  google_source.py  local_source.py  source.py  transform.py
control_rods/schema/: __init__.py  models.py
jarvis/: __init__.py  checkin.py  cli.py  dashboard.py  flags.py  forecast.py  greetings.py  networth.py  peptides.py  report.py  schema.py  seed.py  store.py  streaks.py  study.py  workouts.py
jarvis/api/: __init__.py  app.py
jarvis/frontend/: index.html
jarvis/frontend/static/: app.js  styles.css
sample_data/: annual_log.csv  destinations.csv  quarter.csv  quarter_meta.csv
scripts/: print_sheet_layout.py
tests/: test_jarvis_api.py  test_jarvis_core.py  test_jarvis_tier1.py  test_jarvis_workouts.py  test_pipeline.py  test_schema.py  test_transform.py
